# bins

./: Makefile  README.md  pyproject.toml
src/bins/: groupby.py
src/executive/: __init__.py  after.py  before.py  groupby.py  trim.py
tests/: test_groupby.py
tests/data/: before-and-after
